# directxmathtest

./: CMakeLists.txt
ext/: testavx.cpp  testavx2.cpp  testbe.cpp  testf16c.cpp  testfma3.cpp  testfma4.cpp  testsse3.cpp  testsse4.cpp
math3/: math3.cpp  math3.h  math3tests.cpp  xmcolor.cpp  xmmat.cpp  xmquat.cpp  xmvec.cpp  xmvec234.cpp
shmath/: test.cpp
xdsp/: Test.cpp
